--- a/qualification_hub/locale/kk/LC_MESSAGES/django.po
+++ b/qualification_hub/locale/kk/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-05 21:58+0600\n"
-"PO-Revision-Date: 2024-05-06 15:30+0000\n"
+"PO-Revision-Date: 2024-05-14 14:23+0000\n"
 "Last-Translator:   <>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
@@ -21,11 +21,11 @@ msgstr ""
 
 #: .\qualification_hub\settings.py:163
 msgid "English"
-msgstr "Ағылшын тілі"
+msgstr "English"
 
 #: .\qualification_hub\settings.py:164
 msgid "Russian"
-msgstr "Орыс тілі"
+msgstr "Русский язык"
 
 #: .\qualification_hub\settings.py:165
 msgid "Kazakh"
@@ -482,7 +482,7 @@ msgstr "Басты бет"
 #: .\templates\students\student_detail.html:30
 #: .\templates\teachers\teacher_detail.html:30
 msgid "Certificates"
-msgstr "Сертификаттар"
+msgstr "Марапаттар"
 
 #: .\templates\footer.html:40
 msgid "Contact Us"
